--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Mercury</h1>
-  <p>Alex Antonio Pacheco Becerra</p>
+  <p style="text-align: center;">Alex Antonio Pacheco Becerra</p>
   <p>Mercury es un servidor de correo electrónico diseñado para sistemas Windows. Desarrollado por David Harris, permite enviar y recibir correos mediante protocolos como SMTP, POP3 y IMAP. Es usado comúnmente en redes pequeñas o medianas, y se integra fácilmente con clientes como Pegasus Mail para ofrecer una solución completa de correo.</p>
   <ol>
     <li>
